--- a/serverless.yml
+++ b/serverless.yml
@@ -10,7 +10,7 @@ provider:
   runtime: nodejs12.x
   memorySize: 256
   stage: ${opt:stage, 'dev'} 
-  region: us-east-1
+  region: ${opt:region, 'us-east-1'}
   environment:
     AUCTIONS_TABLE_NAME: ${self:custom.AuctionsTable.name}
   iamRoleStatements:
@@ -48,6 +48,11 @@ functions:
       - http:
           method: PATCH
           path: /auction/{id}/bid
+
+  processAuctions:
+    handler: src/handlers/processAuctions.handler
+    # events:
+    #   - schedule: rate(1 minute)
 
 custom:
   AuctionsTable:
