--- a/package.json
+++ b/package.json
@@ -4,12 +4,18 @@
   "description": "Codingly template for Serverless Framework projects",
   "author": "Ariel Weinberger <ariel@codingly.io>",
   "license": "MIT",
+  "scripts": {
+    "eslint": "./node_modules/eslint/bin/eslint.js"
+  },
   "devDependencies": {
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.6.0",
+    "eslint": "^7.10.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "serverless-bundle": "^1.3.3",
     "serverless-pseudo-parameters": "^2.5.0",
     "webpack": "^4.35.2"
